--- a/package.json
+++ b/package.json
@@ -23,36 +23,35 @@
     "agentkeepalive": "^4.1.4",
     "authress-login": "^1.3.111",
     "authress-sdk": "^2.0.69",
-    "axios": "^0.21.3",
-    "axios-retry": "^3.1.9",
+    "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
     "base64url": "^3.0.1",
     "bcryptjs": "^2.4.3",
-    "cookie": "^0.4.1",
-    "error-object-polyfill": "^1.2.23",
+    "cookie": "^0.5.0",
+    "error-object-polyfill": "^1.2.26",
     "fido2-lib": "^3.3.5",
     "google-auth-library": "^7.10.2",
-    "jose": "^3.6.2",
+    "jose": "^4.14.4",
     "json-stringify-safe": "^5.0.1",
-    "lodash": "^4.17.15",
-    "luxon": "^1.21.2",
-    "openapi-factory": "^5.3.48",
+    "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
+    "openapi-factory": "^5.4.60",
     "saml-login": "^0.1.23",
-    "short-uuid": "^4.1.0",
-    "uuid": "^8.3.2"
+    "short-uuid": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/eslint-parser": "^7.15.8",
-    "aws-architect": "^6.6.41",
-    "aws-sdk": "^2.1125.0",
+    "aws-architect": "^6.7.62",
+    "aws-sdk": "^2.1413.0",
     "chai": "^4.2.0",
-    "commander": "^4.0.1",
+    "commander": "^11.0.0",
     "eslint": "^7.20.0",
     "eslint-config-cimpress-atsquad": "^1.0.67",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-mocha": "^8.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^11.1.1",
     "glob": "^7.1.6",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
