--- a/package.json
+++ b/package.json
@@ -10,33 +10,25 @@
   "scripts": {
     "start": "nodemon make.js run",
     "build": "node make.js",
-    "deploy": "node make.js deploy",
-    "delete": "node make.js delete",
-    "roll-out": "node make.js roll-out",
+    "publish-lambda-code-package": "node make.js publish-lambda-code-package",
     "lint": "eslint --ext .js src tests make.js",
-    "test": "mocha tests/*.test.js tests/**/*.test.js --require tests/.setup.js",
-    "update-tlds": "node make.js update-tlds"
+    "test": "mocha tests/*.test.js tests/**/*.test.js --require tests/.setup.js"
   },
   "config": {},
   "dependencies": {
     "@authress/login": "^2.2.227",
     "agentkeepalive": "^4.1.4",
-    "authress-login": "^1.3.111",
     "authress-sdk": "^2.0.69",
     "axios": "^1.4.0",
     "axios-retry": "^3.5.1",
     "base64url": "^3.0.1",
-    "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "error-object-polyfill": "^1.2.26",
-    "fido2-lib": "^3.3.5",
-    "google-auth-library": "^7.10.2",
     "jose": "^4.14.4",
     "json-stringify-safe": "^5.0.1",
     "lodash": "^4.17.21",
     "luxon": "^3.3.0",
     "openapi-factory": "^5.4.60",
-    "saml-login": "^0.1.23",
     "short-uuid": "^4.2.2"
   },
   "devDependencies": {
@@ -63,10 +55,19 @@
     "url": "git+https://github.com/Authress/identity-aware-proxy.git"
   },
   "keywords": [
-    "aws lambda microservice"
+    "IAP",
+    "Identity Aware Proxy",
+    "S3 Private website",
+    "private website",
+    "Authress",
+    "Website authentication",
+    "authentication",
+    "Login",
+    "authorization",
+    "proxy"
   ],
   "author": "Author",
-  "license": "SEE LICENSE IN rhosys.ch",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Authress/identity-aware-proxy.git"
   },
